# portfolio

./: .gitignore  LICENSE  README.md
claimpin/: LICENSE  README.md  ROADMAP.md  pyproject.toml
claimpin/case_studies/seminar_paper/: README.md  claims.yaml  ops.py  parity.py  parity_report.md  report.html
claimpin/examples/quickstart/: claims.yaml  make_data.py  ops.py  paper.md
claimpin/examples/quickstart/results/: survey.csv  toy_results.json
claimpin/src/claimpin/: __init__.py  cli.py  context.py  extract.py  report.py  resolver.py  runner.py  schema.py
claimpin/tests/: test_cli.py  test_extract.py  test_resolver.py  test_runner.py  test_schema.py
seminar-paper/: Dignity_Is_a_Baseline.docx  README.md
seminar-paper/replication/: README.md  final_analysis_pipeline.py  reconcile_headline_r_2026-05-29.py  run_sorting_mechanism.py
two-faces-of-solidarity/: ANALYSIS_PLAN.md  README.md  WHAT_WOULD_KILL_THIS.md
two-faces-of-solidarity/code/: pipeline.py  sur_dissociation.py
two-faces-of-solidarity/results/: numbers.csv  sur_numbers.csv
